feat: add pre-commit hooks and ci coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,16 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Pre-commit hooks
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files --show-diff-on-failure
+
       - name: Lint
         run: yarn lint
 
       - name: Test
-        run: yarn test --ci
+        run: yarn test --ci --coverage
 
       - name: Build
         run: yarn build
