--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,15 @@ repos:
     rev: v3.1.0
     hooks:
       - id: prettier
+  - repo: local
+    hooks:
+      - id: eslint
+        name: ESLint
+        entry: npx eslint
+        language: system
+        types: [ts]
+      - id: type-check
+        name: Type Check
+        entry: npx tsc --noEmit --project tsconfig.precommit.json
+        language: system
+        pass_filenames: false
